jam/symbolic_solvers/tptp/antlr/tptpParser.py
# Generated from tptp.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class tptpParser ( Parser ):

    grammarFileName = "tptp.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'axiom'", "'conjecture'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'fof'", "','", "'.'", "'~'", "'&'", "'|'", 
                     "'=>'", "'<=>'", "'<~>'", "'!'", "'?'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "'['", "']'", "':'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "IGNORE_NEWLINE", 
                      "NEWLINE", "LINE_ESCAPE", "WHITESPACE", "SL_COMMENT", 
                      "BL_COMMENT", "FOF_ID", "SEP", "DOT", "NOT", "CONJ", 
                      "DISJ", "IMPL", "BICOND", "XOR", "FORALL", "EXISTS", 
                      "UPPER_ALPHA", "LOWER_ALPHA", "DIGIT", "ALPHA_NUMERIC", 
                      "UPPER_WORD", "LOWER_WORD", "LPAREN", "RPAREN", "LSQPAREN", 
                      "RSQPAREN", "COLON" ]

    RULE_formular_role = 0
    RULE_start = 1
    RULE_annotated_formula = 2
    RULE_fof_annotated = 3
    RULE_fof_formula = 4
    RULE_term = 5
    RULE_ind_constant = 6
    RULE_var_constant = 7
    RULE_pred_constant = 8
    RULE_name = 9
    RULE_bin_connective = 10
    RULE_quantifier = 11

    ruleNames =  [ "formular_role", "start", "annotated_formula", "fof_annotated", 
                   "fof_formula", "term", "ind_constant", "var_constant", 
                   "pred_constant", "name", "bin_connective", "quantifier" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    IGNORE_NEWLINE=3
    NEWLINE=4
    LINE_ESCAPE=5
    WHITESPACE=6
    SL_COMMENT=7
    BL_COMMENT=8
    FOF_ID=9
    SEP=10
    DOT=11
    NOT=12
    CONJ=13
    DISJ=14
    IMPL=15
    BICOND=16
    XOR=17
    FORALL=18
    EXISTS=19
    UPPER_ALPHA=20
    LOWER_ALPHA=21
    DIGIT=22
    ALPHA_NUMERIC=23
    UPPER_WORD=24
    LOWER_WORD=25
    LPAREN=26
    RPAREN=27
    LSQPAREN=28
    RSQPAREN=29
    COLON=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Formular_roleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return tptpParser.RULE_formular_role

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormular_role" ):
                listener.enterFormular_role(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormular_role" ):
                listener.exitFormular_role(self)




    def formular_role(self):

        localctx = tptpParser.Formular_roleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_formular_role)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            _la = self._input.LA(1)
            if not(_la==tptpParser.T__0 or _la==tptpParser.T__1):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def annotated_formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tptpParser.Annotated_formulaContext)
            else:
                return self.getTypedRuleContext(tptpParser.Annotated_formulaContext,i)


        def EOF(self):
            return self.getToken(tptpParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(tptpParser.NEWLINE)
            else:
                return self.getToken(tptpParser.NEWLINE, i)

        def getRuleIndex(self):
            return tptpParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = tptpParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==tptpParser.NEWLINE:
                self.state = 26
                self.match(tptpParser.NEWLINE)
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 32
            self.annotated_formula()
            self.state = 41
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 34 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 33
                        self.match(tptpParser.NEWLINE)
                        self.state = 36 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==tptpParser.NEWLINE):
                            break

                    self.state = 38
                    self.annotated_formula() 
                self.state = 43
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==tptpParser.NEWLINE:
                self.state = 44
                self.match(tptpParser.NEWLINE)
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 50
            self.match(tptpParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Annotated_formulaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fof_annotated(self):
            return self.getTypedRuleContext(tptpParser.Fof_annotatedContext,0)


        def getRuleIndex(self):
            return tptpParser.RULE_annotated_formula

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnnotated_formula" ):
                listener.enterAnnotated_formula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnnotated_formula" ):
                listener.exitAnnotated_formula(self)




    def annotated_formula(self):

        localctx = tptpParser.Annotated_formulaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_annotated_formula)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.fof_annotated()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fof_annotatedContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOF_ID(self):
            return self.getToken(tptpParser.FOF_ID, 0)

        def LPAREN(self):
            return self.getToken(tptpParser.LPAREN, 0)

        def name(self):
            return self.getTypedRuleContext(tptpParser.NameContext,0)


        def SEP(self, i:int=None):
            if i is None:
                return self.getTokens(tptpParser.SEP)
            else:
                return self.getToken(tptpParser.SEP, i)

        def formular_role(self):
            return self.getTypedRuleContext(tptpParser.Formular_roleContext,0)


        def fof_formula(self):
            return self.getTypedRuleContext(tptpParser.Fof_formulaContext,0)


        def RPAREN(self):
            return self.getToken(tptpParser.RPAREN, 0)

        def DOT(self):
            return self.getToken(tptpParser.DOT, 0)

        def getRuleIndex(self):
            return tptpParser.RULE_fof_annotated

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFof_annotated" ):
                listener.enterFof_annotated(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFof_annotated" ):
                listener.exitFof_annotated(self)




    def fof_annotated(self):

        localctx = tptpParser.Fof_annotatedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_fof_annotated)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(tptpParser.FOF_ID)
            self.state = 55
            self.match(tptpParser.LPAREN)
            self.state = 56
            self.name()
            self.state = 57
            self.match(tptpParser.SEP)
            self.state = 58
            self.formular_role()
            self.state = 59
            self.match(tptpParser.SEP)
            self.state = 60
            self.fof_formula(0)
            self.state = 61
            self.match(tptpParser.RPAREN)
            self.state = 62
            self.match(tptpParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fof_formulaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return tptpParser.RULE_fof_formula

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class NegationContext(Fof_formulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a tptpParser.Fof_formulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(tptpParser.NOT, 0)
        def fof_formula(self):
            return self.getTypedRuleContext(tptpParser.Fof_formulaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNegation" ):
                listener.enterNegation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNegation" ):
                listener.exitNegation(self)


    class Binary_connectiveContext(Fof_formulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a tptpParser.Fof_formulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def fof_formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tptpParser.Fof_formulaContext)
            else:
                return self.getTypedRuleContext(tptpParser.Fof_formulaContext,i)

        def bin_connective(self):
            return self.getTypedRuleContext(tptpParser.Bin_connectiveContext,0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(tptpParser.NEWLINE)
            else:
                return self.getToken(tptpParser.NEWLINE, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinary_connective" ):
                listener.enterBinary_connective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinary_connective" ):
                listener.exitBinary_connective(self)


    class QuantificationContext(Fof_formulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a tptpParser.Fof_formulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def quantifier(self):
            return self.getTypedRuleContext(tptpParser.QuantifierContext,0)

        def LSQPAREN(self):
            return self.getToken(tptpParser.LSQPAREN, 0)
        def var_constant(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tptpParser.Var_constantContext)
            else:
                return self.getTypedRuleContext(tptpParser.Var_constantContext,i)

        def RSQPAREN(self):
            return self.getToken(tptpParser.RSQPAREN, 0)
        def COLON(self):
            return self.getToken(tptpParser.COLON, 0)
        def fof_formula(self):
            return self.getTypedRuleContext(tptpParser.Fof_formulaContext,0)

        def SEP(self, i:int=None):
            if i is None:
                return self.getTokens(tptpParser.SEP)
            else:
                return self.getToken(tptpParser.SEP, i)
        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(tptpParser.NEWLINE)
            else:
                return self.getToken(tptpParser.NEWLINE, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuantification" ):
                listener.enterQuantification(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuantification" ):
                listener.exitQuantification(self)


    class Atomic_formulaContext(Fof_formulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a tptpParser.Fof_formulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def pred_constant(self):
            return self.getTypedRuleContext(tptpParser.Pred_constantContext,0)

        def LPAREN(self):
            return self.getToken(tptpParser.LPAREN, 0)
        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tptpParser.TermContext)
            else:
                return self.getTypedRuleContext(tptpParser.TermContext,i)

        def RPAREN(self):
            return self.getToken(tptpParser.RPAREN, 0)
        def SEP(self, i:int=None):
            if i is None:
                return self.getTokens(tptpParser.SEP)
            else:
                return self.getToken(tptpParser.SEP, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtomic_formula" ):
                listener.enterAtomic_formula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtomic_formula" ):
                listener.exitAtomic_formula(self)


    class ParenthesisContext(Fof_formulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a tptpParser.Fof_formulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(tptpParser.LPAREN, 0)
        def fof_formula(self):
            return self.getTypedRuleContext(tptpParser.Fof_formulaContext,0)

        def RPAREN(self):
            return self.getToken(tptpParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenthesis" ):
                listener.enterParenthesis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenthesis" ):
                listener.exitParenthesis(self)



    def fof_formula(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = tptpParser.Fof_formulaContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_fof_formula, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [tptpParser.LOWER_WORD]:
                localctx = tptpParser.Atomic_formulaContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 65
                self.pred_constant()
                self.state = 66
                self.match(tptpParser.LPAREN)
                self.state = 67
                self.term()
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==tptpParser.SEP:
                    self.state = 68
                    self.match(tptpParser.SEP)
                    self.state = 69
                    self.term()
                    self.state = 74
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 75
                self.match(tptpParser.RPAREN)
                pass
            elif token in [tptpParser.LPAREN]:
                localctx = tptpParser.ParenthesisContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 77
                self.match(tptpParser.LPAREN)
                self.state = 78
                self.fof_formula(0)
                self.state = 79
                self.match(tptpParser.RPAREN)
                pass
            elif token in [tptpParser.NOT]:
                localctx = tptpParser.NegationContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 81
                self.match(tptpParser.NOT)
                self.state = 82
                self.fof_formula(3)
                pass
            elif token in [tptpParser.FORALL, tptpParser.EXISTS]:
                localctx = tptpParser.QuantificationContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 83
                self.quantifier()
                self.state = 84
                self.match(tptpParser.LSQPAREN)
                self.state = 85
                self.var_constant()
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==tptpParser.SEP:
                    self.state = 86
                    self.match(tptpParser.SEP)
                    self.state = 87
                    self.var_constant()
                    self.state = 92
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 93
                self.match(tptpParser.RSQPAREN)
                self.state = 94
                self.match(tptpParser.COLON)
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==tptpParser.NEWLINE:
                    self.state = 95
                    self.match(tptpParser.NEWLINE)
                    self.state = 100
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 101
                self.fof_formula(1)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 123
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = tptpParser.Binary_connectiveContext(self, tptpParser.Fof_formulaContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_fof_formula)
                    self.state = 105
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 109
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==tptpParser.NEWLINE:
                        self.state = 106
                        self.match(tptpParser.NEWLINE)
                        self.state = 111
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 112
                    self.bin_connective()
                    self.state = 116
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==tptpParser.NEWLINE:
                        self.state = 113
                        self.match(tptpParser.NEWLINE)
                        self.state = 118
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 119
                    self.fof_formula(3) 
                self.state = 125
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return tptpParser.RULE_term

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Var_valueContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a tptpParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def var_constant(self):
            return self.getTypedRuleContext(tptpParser.Var_constantContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_value" ):
                listener.enterVar_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_value" ):
                listener.exitVar_value(self)


    class Ind_valueContext(TermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a tptpParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ind_constant(self):
            return self.getTypedRuleContext(tptpParser.Ind_constantContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInd_value" ):
                listener.enterInd_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInd_value" ):
                listener.exitInd_value(self)



    def term(self):

        localctx = tptpParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_term)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [tptpParser.LOWER_WORD]:
                localctx = tptpParser.Ind_valueContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.ind_constant()
                pass
            elif token in [tptpParser.UPPER_WORD]:
                localctx = tptpParser.Var_valueContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.var_constant()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ind_constantContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LOWER_WORD(self):
            return self.getToken(tptpParser.LOWER_WORD, 0)

        def getRuleIndex(self):
            return tptpParser.RULE_ind_constant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInd_constant" ):
                listener.enterInd_constant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInd_constant" ):
                listener.exitInd_constant(self)




    def ind_constant(self):

        localctx = tptpParser.Ind_constantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ind_constant)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(tptpParser.LOWER_WORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_constantContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UPPER_WORD(self):
            return self.getToken(tptpParser.UPPER_WORD, 0)

        def getRuleIndex(self):
            return tptpParser.RULE_var_constant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_constant" ):
                listener.enterVar_constant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_constant" ):
                listener.exitVar_constant(self)




    def var_constant(self):

        localctx = tptpParser.Var_constantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_var_constant)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(tptpParser.UPPER_WORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Pred_constantContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LOWER_WORD(self):
            return self.getToken(tptpParser.LOWER_WORD, 0)

        def getRuleIndex(self):
            return tptpParser.RULE_pred_constant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPred_constant" ):
                listener.enterPred_constant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPred_constant" ):
                listener.exitPred_constant(self)




    def pred_constant(self):

        localctx = tptpParser.Pred_constantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_pred_constant)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(tptpParser.LOWER_WORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LOWER_WORD(self):
            return self.getToken(tptpParser.LOWER_WORD, 0)

        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(tptpParser.DIGIT)
            else:
                return self.getToken(tptpParser.DIGIT, i)

        def getRuleIndex(self):
            return tptpParser.RULE_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)




    def name(self):

        localctx = tptpParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_name)
        self._la = 0 # Token type
        try:
            self.state = 142
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [tptpParser.LOWER_WORD]:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.match(tptpParser.LOWER_WORD)
                pass
            elif token in [tptpParser.DIGIT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 138 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 137
                    self.match(tptpParser.DIGIT)
                    self.state = 140 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==tptpParser.DIGIT):
                        break

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bin_connectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return tptpParser.RULE_bin_connective

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ImplContext(Bin_connectiveContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a tptpParser.Bin_connectiveContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IMPL(self):
            return self.getToken(tptpParser.IMPL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImpl" ):
                listener.enterImpl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImpl" ):
                listener.exitImpl(self)


    class DisjContext(Bin_connectiveContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a tptpParser.Bin_connectiveContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DISJ(self):
            return self.getToken(tptpParser.DISJ, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDisj" ):
                listener.enterDisj(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDisj" ):
                listener.exitDisj(self)


    class ConjContext(Bin_connectiveContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a tptpParser.Bin_connectiveContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CONJ(self):
            return self.getToken(tptpParser.CONJ, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConj" ):
                listener.enterConj(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConj" ):
                listener.exitConj(self)


    class BicondContext(Bin_connectiveContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a tptpParser.Bin_connectiveContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BICOND(self):
            return self.getToken(tptpParser.BICOND, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBicond" ):
                listener.enterBicond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBicond" ):
                listener.exitBicond(self)


    class XorContext(Bin_connectiveContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a tptpParser.Bin_connectiveContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def XOR(self):
            return self.getToken(tptpParser.XOR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterXor" ):
                listener.enterXor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitXor" ):
                listener.exitXor(self)



    def bin_connective(self):
